# epimem

./: .gitignore  GUIDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
epimem/: __init__.py  confidence.py  datasets.py  goodness.py  model.py  plot.py  stability.py  timing.py  trend.py  tuning.py
epimem/data/: flucyl.csv
tests/: test_epimem.py  test_equivalence.py
tests/reference/: evolution_reference.csv  flucyl_gappy.csv  generate_companions_reference.R  generate_evolution_reference.R  generate_goodness_reference.R  generate_inspection_reference.R  generate_reference.R  generate_roc_reference.R  generate_stability_reference.R  goodness_reference.csv  inspection_optimum.csv  inspection_reference.csv  inspection_timings.csv  intensity_reference.csv  reference_thresholds.csv  roc_optimum.csv  roc_reference.csv  stability_reference.csv  trend_reference.csv
